allowing to run with different models and filters

--- a/notebook/Dedupe.ipynb
+++ b/notebook/Dedupe.ipynb
@@ -27,13 +27,13 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "sys.path.append('C:\\\\Users\\\\ehamilton\\\\OneDrive - Verint Systems Ltd\\\\Documents\\\\Personal\\\\CloudKitchens\\\\deduplicate')\n",
+    "sys.path.append('C:\\\\Users\\\\ehamilton\\\\deduplicate')\n",
     "import utils\n",
-    "sys.path.append('C:\\\\Users\\\\ehamilton\\\\OneDrive - Verint Systems Ltd\\\\Documents\\\\Personal\\\\CloudKitchens\\\\deduplicate\\\\tests')\n",
+    "sys.path.append('C:\\\\Users\\\\ehamilton\\\\deduplicate\\\\tests')\n",
     "import helpers\n",
     "\n",
     "\n",
-    "os.chdir('C:\\\\Users\\\\ehamilton\\\\OneDrive - Verint Systems Ltd\\\\Documents\\\\Personal\\\\CloudKitchens\\\\deduplicate\\\\tests')\n",
+    "os.chdir('C:\\\\Users\\\\ehamilton\\\\deduplicate\\\\tests')\n",
     "df = helpers.load_dataset()\n",
     "\n",
     "\n"
@@ -65,7 +65,7 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "sys.path.append('C:\\\\Users\\\\ehamilton\\\\OneDrive - Verint Systems Ltd\\\\Documents\\\\Personal\\\\CloudKitchens\\\\deduplicate')\n",
+    "sys.path.append('C:\\\\Users\\\\ehamilton\\\\deduplicate')\n",
     "import parallelize\n",
     "import utils\n",
     "matches = parallelize.parallelize(num_processes=1, map=partition, reduce=match).run(job)\n",
